--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.profiles.active=h2
+server.port=8087
+#springdoc.swagger-ui.enabled=false
+#springdoc.api-docs.enabled=false
+#logging.file.name=logs/spring-boot-logging.log
+#logging.level.root=error
