task action parent id column add

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:C:/yasin/h2/workflow.db
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.generate_statistics=true
