home controller add

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -5,7 +5,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=1
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:C:/yasin/h2/workflow.db;INIT=CREATE SCHEMA IF NOT EXISTS WFS;
+spring.datasource.url=jdbc:h2:file:C:/yasin/h2/workflow.db;AUTO_SERVER=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS WFS;
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.show_sql=true
