--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=h2
+spring.profiles.active=postgresql
 server.port=8087
 #springdoc.swagger-ui.enabled=false
 #springdoc.api-docs.enabled=false
