--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.hbm2dll.create_namespaces=true
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.task.scheduling.pool.size=200
+#spring.cache.type=none
